TestWebKitAPI crashes when running under GuardMalloc https://bugs.webkit.org/show_bug.cgi?id=124546

Reviewed by Tim Horton.

* UIProcess/Downloads/DownloadProxyMap.cpp:
(WebKit::DownloadProxyMap::downloadFinished):
Grab the download ID before removing the DownloadProxy from the map.

Canonical link: https://commits.webkit.org/142736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159471 268f45cc-cd09-0410-ab3c-d52691b4dbfc