Source/WebKit2/UIProcess/Downloads/DownloadProxyMap.cpp
@@ -56,12 +56,14 @@ DownloadProxy* DownloadProxyMap::createDownloadProxy(WebContext* webContext)
 
 void DownloadProxyMap::downloadFinished(DownloadProxy* downloadProxy)
 {
-    ASSERT(m_downloads.contains(downloadProxy->downloadID()));
+    uint64_t downloadID = downloadProxy->downloadID();
+
+    ASSERT(m_downloads.contains(downloadID));
 
     downloadProxy->invalidate();
-    m_downloads.remove(downloadProxy->downloadID());
+    m_downloads.remove(downloadID);
 
-    m_process->removeMessageReceiver(Messages::DownloadProxy::messageReceiverName(), downloadProxy->downloadID());
+    m_process->removeMessageReceiver(Messages::DownloadProxy::messageReceiverName(), downloadID);
 }
 
 void DownloadProxyMap::processDidClose()
